--- a/files/styles.css
+++ b/files/styles.css
@@ -98,8 +98,11 @@ a:visited {
 
 .portrait{
 	float:left;
-	padding-right:10px;
-	padding-bottom:10px;
+	margin-right:10px;
+	margin-bottom:10px;
+	border-style: solid;
+	border-width: 2px;
+	border-color: #3e4244;
 }
 
 
