--- a/files/styles.css
+++ b/files/styles.css
@@ -172,8 +172,9 @@ iframe.download {
 	}
 }
 
-@media screen and (max-width:760px) {
+@media screen and (max-width:800px) {
 	.screenshot {
-		width: 96.66666%;
+		width: 100%;
+		margin: 10px 0px;
 	}
 }
