--- a/files/styles.css
+++ b/files/styles.css
@@ -54,6 +54,7 @@ a {
   font-size: 1em;
   border: none;
   margin: 2px;
+  cursor: pointer;
 }
  
 .dropdown-content {
@@ -63,10 +64,12 @@ a {
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
+  cursor: pointer;
 }
 
 .dropdown {
 	display: inline-block;
+	margin-right: 4px;
 }
 
 .dropdown-content a {
@@ -169,6 +172,9 @@ iframe.download {
 @media screen and (max-width:445px) {
 	.banner {
 		font-size: 2em;
+	}
+	.contenttext {
+		padding: 0px;
 	}
 }
 
